<?xml version="1.0"?>
<package format="2">
    <name>tod_video</name>
    <version>1.0.0</version>
    <description>The tod_video package</description>
    <maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tod_msgs</build_depend>
    <build_depend>tod_network</build_depend>
    <build_depend>tod_helper</build_depend>
    <build_depend>tod_core</build_depend>
    <build_depend>rostest</build_depend> <!-- not for open source -->

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>tod_msgs</build_export_depend>
    <build_export_depend>tod_network</build_export_depend>
    <build_export_depend>tod_helper</build_export_depend>
    <build_export_depend>tod_core</build_export_depend>
    <build_export_depend>rostest</build_export_depend> <!-- not for open source -->

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tod_vehicle_config</exec_depend>
</package>
